fixed contrast

--- a/lesson9/prophets.css
+++ b/lesson9/prophets.css
@@ -17,7 +17,7 @@ body {
 }
 
 section {
-    color: white;
+    color: black;
     background-color: rgb(154, 154, 207);
     border: solid 2px midnightblue;
     border-radius: 10px;
